minor fixes on mobile

--- a/style.css
+++ b/style.css
@@ -239,13 +239,23 @@ h1, h2, h3, h4 {
         height: 35px;
     }
 
-    .introduction__left {
-        position: relative;
-    }
-
     .introduction .container {
+        padding: 40px 0;
         flex-direction: column;
         gap: 15px;
+    }
+
+    .introduction__subtitle {
+        margin: 0;
+        font-size: 12px;
+    }
+
+    .introduction__title {
+        font-size: 24px;
+    }
+
+    .introduction__text {
+        font-size: 12px;
     }
 
     .introduction__banner {
@@ -258,10 +268,15 @@ h1, h2, h3, h4 {
     .footer .container {
         flex-direction: column;
         gap: 10px;
+        
+        width: 100%;
+        height: 100%;
 
         left: 0;
         top: 0;
         justify-content: center;
         align-items: center;
+
+        padding: 0 0 30px 0;
     }
 }
